src/test/resources/testinput/parsable/symtab/invalid_coco/Test03.ocl
/* (c) https://github.com/MontiCore/monticore */
package invariants;

ocl Test03 {
  inv(boolean a, boolean b):
    a || b &&
    a && b &&
    !a &&
    ~a;
}
